Fri Jun 20 14:15:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * orbsvcs/orbsvcs/Notify/MonitorControl/MonitorManager.h:

          Incorrect ACE_ARGV_T base character type corrected.

Fri Jun 20 12:23:19 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * examples/RTScheduling/DT_Creator.cpp:

          Fixed a memory leak and a time_t conversion warning.

        * examples/RTScheduling/Task_Stats.h:
        * examples/RTScheduling/Task_Stats.inl:
        * examples/RTScheduling/Task_Stats.cpp:

          Use time_t for time related data to avoid the need to cast.

        * examples/RTScheduling/Job_i.cpp:

          Removed static_cast's that are no longer needed.

Thu Jun 19 17:38:09 UTC 2008  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * tests/Reliable_Oneways/client.cpp:

          Remove redundant "" 3rd parameter (orbID) from ORB_init() calls.

Thu Jun 19 16:49:23 UTC 2008  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * performance-tests/CSD_Strategy/TestApps/ClientApp.cpp:
        * performance-tests/CSD_Strategy/TestApps/ServerApp.cpp:
        * performance-tests/RTCorba/Multiple_Endpoints/Orb_Per_Priority/server.cpp:
        * performance-tests/RTCorba/Oneways/Reliable/client.cpp:
        * performance-tests/RTCorba/Oneways/Reliable/server.cpp:
        * performance-tests/RTCorba/Thread_Pool/server.cpp:

          Remove redundant "" 3rd parameter (orbID) from ORB_init() calls.

Thu Jun 19 16:43:52 UTC 2008  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * tests/Bug_2319_Regression/server.cpp:
        * tests/Bug_2429_Regression/server.cpp:
        * tests/Bug_2560_Regression/client.cpp:
        * tests/CSD_Strategy_Tests/Broken/ClientApp.cpp:
        * tests/CSD_Strategy_Tests/Broken/ServerApp.cpp:
        * tests/CSD_Strategy_Tests/TP_Test_1/ClientApp.cpp:
        * tests/CSD_Strategy_Tests/TP_Test_1/ServerApp.cpp:
        * tests/CSD_Strategy_Tests/TP_Test_2/ClientApp.cpp: